[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3.1.8", features = ["derive"] } # 命令行参数解析
colored = "2" # 终端输出颜色
jsonxf = "1.1" # json 格式化
mime = "0.3" # 处理mime 类型
reqwest = { version = "0.11", features = ["json"] } # http 请求
tokio = { version = "1", features = ["full"] } # 异步运行时