[package]
name = "tumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2" # web 服务框架
anyhow = "1" # 错误处理
base64 = "0.13" # base64 编码/解码
bytes = "1" # 处理字节流
image = "0.23" # 图片处理
lazy_static = "1" # 通过宏方便初始化静态变量
lru = "0.6" # LRU cache
percent-encoding = "2" # url 编码/解码
photon-rs = "0.3" # 图片效果
prost = "0.8" # protobuf
reqwest = "0.11" # http 请求
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
tokio = { version = "1", features = ["full"] } # 异步运行时
tower = {version = "0.4", features = ["util", "timeout", "load-shed", "limit"]} # 服务处理及中间件
tower-http = {version = "0.1", features = ["add-extension", "compression-full", "trace"]} # http 中间件
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.2" # 日志和追踪

[build-dependencies]
prost-build = "0.8" # 编译protobuf